--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,6 @@
 <div class="head">
     <a href="/admin">ADMIN HOME</a>
+    <a href="/newmember">NEW MEMBER</a>
     <div class="navigation"></div>
 
     <h1>Friends of Chichester Harbour</h1>
