[FORCE COMMIT] updating styling

--- a/views/adminhome.html
+++ b/views/adminhome.html
@@ -1,6 +1,19 @@
 <div class="head">
     <div class="navigation"></div>
 
+    <a href="/">HOME</a>
     <h1>ADMIN HOME</h1>
-    <p>hello</p>
+
+    <div class="frame">
+        <div class="bit1">
+            <a href="/addmember"><button class="circle left">+</button>Add Member</a>
+        </div>
+
+        <div class="bit1 frame">
+            <form action="/search" method="POST">
+                <input type="text" placeholder="enter member number or name here" class="bit75">
+                <input type="submit" value="search" class="bit25">
+            </form>
+        </div>
+    </div>
 </div>
