--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,2 +1,105 @@
-body {
-  backgorund-color: black; }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+button.circle {
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  border: 0;
+  font-size: 1.5em;
+  font-weight: light;
+  background-color: #8e8; }
+
+input[type=text], input[type=password] {
+  display: block;
+  font-size: 1.2em;
+  padding: 0.5em;
+  box-sizing: border-box;
+  background-color: #fff;
+  color: #222;
+  cursor: text;
+  border: 1px solid #ccc;
+  border-radius: 2px; }
+  input[type=text]:focus, input[type=password]:focus {
+    background-color: #efe;
+    outline: 0; }
+
+input[type=submit] {
+  height: 3em;
+  width: 9em;
+  text-align: center;
+  font-size: 15px;
+  outline: 0;
+  background: #6b6;
+  border: 1px solid #6b6;
+  color: #fff;
+  border-radius: 2px; }
+
+.new-member-container {
+  text-align: center; }
+  .new-member-container h1 {
+    margin: 1em 0em; }
+
+.new-member-form {
+  padding-left: 20%; }
+  .new-member-form input {
+    margin-right: 0.25em; }
+
+.frame {
+  margin: 0 auto;
+  max-width: 100%; }
+  .frame:after {
+    content: "";
+    display: table;
+    clear: both; }
+
+.bit25 {
+  width: 25%; }
+
+.bit75 {
+  width: 75%; }
+
+.bit50 {
+  width: 50%; }
+
+.bit1 {
+  width: 100%; }
+
+.bit2 {
+  width: 50%; }
+
+.bit3 {
+  width: 33.33333%; }
+
+.bit4 {
+  width: 25%; }
+
+.left {
+  float: left; }
+
+[class*='bit'] {
+  float: left; }
+
+@media (max-width: 30em) {
+  .bit-1 {
+    width: 100%; }
+  .bit-2 {
+    width: 100%; }
+  .bit-3 {
+    width: 100%; }
+  .bit-4 {
+    width: 100%; } }
+
+@media (min-width: 30em) and (max-width: 50em) {
+  .bit-4, .bit-6, .bit-8, .bit-10, .bit-12 {
+    width: 50%; }
+  .bit-1, .bit-2, .bit-3, .bit-5, .bit-7, .bit-9, .bit-11 {
+    width: 100%; } }
+
+@media (min-width: 50em) and (max-width: 68.75em) {
+  .bit-2, .bit-7 {
+    width: 100%; }
+  .bit-4, .bit-8, .bit-10, .bit-12 {
+    width: 50%; } }
