--- a/views/layout.html
+++ b/views/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel= "stylesheet" type = "text/css" href= "../assets/css/main.css">
+    <link rel= "stylesheet" type="text/css" href= "/css/main.css">
 </head>
 <body>
 
