--- a/views/adminhome.html
+++ b/views/adminhome.html
@@ -1,11 +1,14 @@
-<div class="head">
-    <div class="navigation"></div>
+<div class="admin-home">
 
-    <a href="/">HOME</a>
-    <h1>ADMIN HOME</h1>
+    <div class="header">
+        <a href="/">HOME</a>
+        <h1>ADMIN HOME</h1>
+    </div>
 
-    <div class="frame">
-        <div class="bit1">
+
+    <div class="frame bit50 admin-controls">
+
+        <div class="frame">
             <a href="/addmember"><button class="circle left">+</button>Add Member</a>
         </div>
 
@@ -15,5 +18,7 @@
                 <input type="submit" value="search" class="bit25">
             </form>
         </div>
+
     </div>
+
 </div>
