--- a/assets/css/components/forms.scss
+++ b/assets/css/components/forms.scss
@@ -1,37 +1,79 @@
-input[type=text], input[type=password] {
+input {
   display: block;
   font-size: 1.2em;
   padding: 0.5em;
   box-sizing: border-box;
+  height: 3em;
+  width: 9em;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  outline: 0;
+}
+
+input[type=text], input[type=password] {
   background-color: #fff;
   color: #222;
   cursor: text;
-  border: 1px solid #ccc;
-  border-radius: 2px;
   &:focus {
     background-color: #efe;
-    outline: 0;
   }
 }
 
 input[type=submit] {
-  height: 3em;
-  width: 9em;
   text-align: center;
-  font-size: 15px;
-  outline: 0;
   background: #6b6;
   border: 1px solid #6b6;
   color: #fff;
-  border-radius: 2px;
-}
+  border-radius: 2px; }
+
+select {
+  height: 3em;
+  width: 9em;
+  padding: 0.5em;}
 
 .new-member-container {
+  overflow: auto;
+  background-color: #fdfdfd;
+  padding: 2em 1em;}
+
+.new-member-head {
   text-align: center;
-  h1 {
-    margin: 1em 0em; }}
+  a {
+    float: left; }}
 
 .new-member-form {
-  padding-left: 20%;
-  input {
-  margin-right: 0.25em; }}
+  text-align: center;
+  margin-top: 4em;
+  margin-left: 25%;
+  input[type=text], select {
+    float: left;}
+  select {
+    margin-left: 2em;
+  }
+  h1 {
+    margin: 1em 0em; }
+  .form-submit {
+    input {
+      width: 7em;
+      margin-right: auto;
+      margin-left: auto;}}
+  .form-birthday {
+    margin-right: 50%;}
+  .form-two {
+    input[type=text] {
+    width: 45%;
+    margin-right: 5%; }}
+  .form-three {
+    input[type=text] {
+      width: 30%;
+      margin-right: 3.3%; }}
+  .form-short {
+    margin-right: 66.6666%;
+    input[type=text] {
+      width: 25%;
+      margin-right: 12.5%; }}
+    .frame {
+      margin-bottom: 1em;
+      input[type=text] {
+        margin-bottom: 1em;
+      }}}
