--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,10 @@
 	'components/errormessages',
 	'components/buttons',
 	'components/forms',
+        'components/adminhome',
+        'components/navigation',
+        'components/header',
 
-	'layout/layout'
+        'layout/layout'
 
 ;
