--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,3 @@
-<div class="head">
-    <a href="/admin">ADMIN HOME</a>
-    <div class="navigation"></div>
-
+<div class="header">
     <h1>Friends of Chichester Harbour</h1>
-    <p>HOME</p>
 </div>
