--- a/views/layout.html
+++ b/views/layout.html
@@ -5,6 +5,19 @@
 </head>
 <body>
 
+  <div class="navigation">
+    <div class="left"> 
+      <a href="/">Home</a>
+      <a href="/admin">Admin Home</a>
+    </div> 
+    
+    <div class="right"> 
+      <a href="/login">Login</a>
+      <a href="/logout">Logout</a>
+      <a href="/signup">Signup</a>
+    </div> 
+  </div>
+
   {{{ content }}}
 
 </body>
