--- a/views/login.html
+++ b/views/login.html
@@ -1,9 +1,11 @@
+<div class="frame login-form bit25">
 
+    <form action="/login" method="post">
 
-<form action="/login" method="post">
+        <input type="text" name="email" tabindex=1 placeholder="email" class="bit1">
+        <input type="password" name="password" tabindex=2 placeholder="password" class="bit1">
+        <input type="submit" tabindex=3 class="bit3">
 
-    <input type="text" name="email" tabindex=1>
-    <input type="password" name="password" tabindex=2>
-    <input type="submit" tabindex=3>
+    </form>
 
-</form>
+</div>
