--- a/views/signup.html
+++ b/views/signup.html
@@ -4,7 +4,7 @@
 
         <input type="text" name="email" placeholder="email" tabindex=1 class="bit1">
         <input type="password" name="password" placeholder="password" tabindex=2 class="bit1">
-        <input type="password" name="password" placeholder="confirm password" tabindex=2 class="bit1">
+        <input type="password" name="cpassword" placeholder="confirm password" tabindex=2 class="bit1">
         <input type="submit" tabindex=3 class="bit3">
 
     </form>
