--- a/assets/css/components/_forms.scss
+++ b/assets/css/components/_forms.scss
@@ -53,13 +53,37 @@ select {
   }
   h1 {
     margin: 1em 0em; }
+  .membershipid {
+    width: 100%;
+    input {
+      width: 45%;
+      margin-right: 55%;}}
+  .form-emails {
+    input[type=text] {
+      width: 30%;
+      margin-right: 2.5%; }
+    .form-bounced {
+      width: 30%;
+      margin-right: 5%;
+      height: 3em;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 2px;
+      float: right;
+      padding: 0.5em;
+      input[type=checkbox] {
+        width: 2em;
+        float: right; }
+      p {
+        float: left;}}}
+  .form-address {
+    input[type=text] {
+      width: 95%; }}
   .form-submit {
     input {
       width: 7em;
       margin-right: auto;
       margin-left: auto;}}
-  .form-birthday {
-    margin-right: 50%;}
   .form-two {
     input[type=text] {
     width: 45%;
@@ -69,7 +93,7 @@ select {
       width: 30%;
       margin-right: 3.3%; }}
   .form-short {
-    margin-right: 66.6666%;
+    margin-right: 33.333333%;
     input[type=text] {
       width: 25%;
       margin-right: 12.5%; }}
