remove extraneous error testing

--- a/views/adminhome.html
+++ b/views/adminhome.html
@@ -11,7 +11,7 @@
 
         <div class="frame bit1">
             <form action="/search" method="POST">
-                <input type="text" placeholder="enter member number or name here">
+                <input type="text" name="query" placeholder="enter member number or name here">
                 <input type="submit" value="search">
             </form>
 
