--- a/assets/css/components/_forms.scss
+++ b/assets/css/components/_forms.scss
@@ -1,13 +1,13 @@
 input {
   display: block;
-  font-size: 1.2em;
+  font-size: 1.0em;
   padding: 0.5em;
   box-sizing: border-box;
-  height: 3em;
   width: 9em;
   border: 1px solid #ccc;
   border-radius: 2px;
   outline: 0;
+  height: 3em;
 }
 
 input[type=text], input[type=password] {
@@ -18,6 +18,9 @@ input[type=text], input[type=password] {
     background-color: #efe;
   }
 }
+
+input[type=date] {
+  display: inline-block;}
 
 input[type=submit] {
   text-align: center;
@@ -42,15 +45,48 @@ select {
   a {
     float: left; }}
 
+.input-with-label {
+  display: inline-block;
+  margin-left: 1em;
+  margin-right: 40%;
+  float: left;
+  input[type=date] {
+    width: 10em;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 1.5em;}
+  input[type=checkbox] {
+    width: 1.5em;
+    display: inline-block;
+    height: 1.5em;
+    vertical-align: middle;
+    margin-right: 1.5em;}}
+
 .new-member-form {
+  span#label {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 0.8em;}
+  input[type=date] {
+    float: left;
+    margin-right: 1em;}
+  hr {
+    margin-top: 1em;
+    margin-bottom: 1.5em;
+    background-color: #ccc;
+    border: none;
+    color: #ccc;
+    height: 1px;
+    width: 90%;
+    margin-left: 2.5%;
+  }
   text-align: center;
   margin-top: 4em;
   margin-left: 25%;
   input[type=text], select {
     float: left;}
   select {
-    margin-left: 2em;
-  }
+    margin-left: 2em;}
   h1 {
     margin: 1em 0em; }
   .membershipid {
@@ -60,22 +96,11 @@ select {
       margin-right: 55%;}}
   .form-emails {
     input[type=text] {
-      width: 30%;
-      margin-right: 2.5%; }
-    .form-bounced {
-      width: 30%;
-      margin-right: 5%;
-      height: 3em;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      border-radius: 2px;
-      float: right;
-      padding: 0.5em;
-      input[type=checkbox] {
-        width: 2em;
-        float: right; }
-      p {
-        float: left;}}}
+      width: 45%;
+      margin-right: 5%; }}
+  .form-birthday {
+    input[type=date] {
+      width: 80%;}}
   .form-address {
     input[type=text] {
       width: 95%; }}
@@ -95,13 +120,17 @@ select {
   .form-short {
     margin-right: 33.333333%;
     input[type=text] {
-      width: 25%;
-      margin-right: 12.5%; }}
-    .frame {
-      margin-bottom: 1em;
-      input[type=text] {
-        margin-bottom: 1em;
+      width: 30%;
+      margin-right: 12.5%;
+      &:nth-child(2) {
+        width: 50%;
+        margin-right: 0;
       }}}
+  .frame {
+    margin-bottom: 1em;
+    input[type=text] {
+      margin-bottom: 1em;
+    }}}
 
 .login-form {
   margin-top: 15em;
