--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,14 +12,14 @@ input[type=button] {
 
 input {
   display: block;
-  font-size: 1.2em;
+  font-size: 1em;
   padding: 0.5em;
   box-sizing: border-box;
-  height: 3em;
   width: 9em;
   border: 1px solid #ccc;
   border-radius: 2px;
-  outline: 0; }
+  outline: 0;
+  height: 3em; }
 
 input[type=text], input[type=password] {
   background-color: #fff;
@@ -27,6 +27,9 @@ input[type=text], input[type=password] {
   cursor: text; }
   input[type=text]:focus, input[type=password]:focus {
     background-color: #efe; }
+
+input[type=date] {
+  display: inline-block; }
 
 input[type=submit] {
   text-align: center;
@@ -51,10 +54,43 @@ select {
   .new-member-head a {
     float: left; }
 
+.input-with-label {
+  display: inline-block;
+  margin-left: 1em;
+  margin-right: 40%;
+  float: left; }
+  .input-with-label input[type=date] {
+    width: 10em;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 1.5em; }
+  .input-with-label input[type=checkbox] {
+    width: 1.5em;
+    display: inline-block;
+    height: 1.5em;
+    vertical-align: middle;
+    margin-right: 1.5em; }
+
 .new-member-form {
   text-align: center;
   margin-top: 4em;
   margin-left: 25%; }
+  .new-member-form span#label {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 0.8em; }
+  .new-member-form input[type=date] {
+    float: left;
+    margin-right: 1em; }
+  .new-member-form hr {
+    margin-top: 1em;
+    margin-bottom: 1.5em;
+    background-color: #ccc;
+    border: none;
+    color: #ccc;
+    height: 1px;
+    width: 90%;
+    margin-left: 2.5%; }
   .new-member-form input[type=text], .new-member-form select {
     float: left; }
   .new-member-form select {
@@ -67,22 +103,10 @@ select {
       width: 45%;
       margin-right: 55%; }
   .new-member-form .form-emails input[type=text] {
-    width: 30%;
-    margin-right: 2.5%; }
-  .new-member-form .form-emails .form-bounced {
-    width: 30%;
-    margin-right: 5%;
-    height: 3em;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    float: right;
-    padding: 0.5em; }
-    .new-member-form .form-emails .form-bounced input[type=checkbox] {
-      width: 2em;
-      float: right; }
-    .new-member-form .form-emails .form-bounced p {
-      float: left; }
+    width: 45%;
+    margin-right: 5%; }
+  .new-member-form .form-birthday input[type=date] {
+    width: 80%; }
   .new-member-form .form-address input[type=text] {
     width: 95%; }
   .new-member-form .form-submit input {
@@ -98,8 +122,11 @@ select {
   .new-member-form .form-short {
     margin-right: 33.33333%; }
     .new-member-form .form-short input[type=text] {
-      width: 25%;
+      width: 30%;
       margin-right: 12.5%; }
+      .new-member-form .form-short input[type=text]:nth-child(2) {
+        width: 50%;
+        margin-right: 0; }
   .new-member-form .frame {
     margin-bottom: 1em; }
     .new-member-form .frame input[type=text] {
