--- a/views/newmember.html
+++ b/views/newmember.html
@@ -9,19 +9,21 @@
     <div class="new-member-form bit50 frame">
 
 
-        <form action="/addmember" method="post">
+        <form action="/members" method="post">
 
             <div class="frame bit1 membershipid">
-                <input type="text" name="membershipId" placeholder="Membership ID">
+                <input type="text" name="id" placeholder="Membership ID">
             </div>
 
+            <hr>
+
             <div class="frame bit3 form-short">
-                <input type="text" name="title" placeholder="title">
-                <input type="text" name="initials" placeholder="Initials">
+                <input type="text" name="title" placeholder="Title">
+                <input type="text" name="initials" placeholder="Initials" id="initials">
             </div>
 
             <div class="frame bit3 form-birthday">
-                <input type="date" name="birthday">
+                <input type="date" name="birthday" placeholder="12/12/2014 12:00">
             </div>
 
             <div class="frame form-two">
@@ -29,47 +31,98 @@
                 <input type="text" name="surname" placeholder="Last name">
             </div>
 
+            <hr>
+
             <div class="frame form-address">
-                <input type="text" name="addressline1" placeholder="Address line 1">
-                <input type="text" name="addressline2" placeholder="Address line 2">
-                <input type="text" name="addressline3" placeholder="Address line 3">
-                <input type="text" name="addressline4" placeholder="Address line 4">
-                <input type="text" name="addressline5" placeholder="Address line 5">
+                <input type="text" name="addressLine1" placeholder="Address line 1">
+                <input type="text" name="addressLine2" placeholder="Address line 2">
+                <input type="text" name="addressLine3" placeholder="Address line 3">
+                <input type="text" name="addressLine4" placeholder="Address line 4">
+                <input type="text" name="addressLine5" placeholder="Address line 5">
             </div>
 
             <div class="frame">
                 <input type="text" name="postcode" placeholder="Postcode">
             </div>
 
+            <hr>
+
             <div class="frame form-deliverer">
                 <input type="text" name="deliverer" placeholder="Deliverer">
             </div>
 
+            <hr>
+
             <div class="frame form-three">
-                <input type="text" name="homephone" placeholder="Home phone">
-                <input type="text" name="mobilephone" placeholder="Mobile phone">
-                <input type="text" name="workphone" placeholder="Work phone">
+                <input type="text" name="homePhone" placeholder="Home phone">
+                <input type="text" name="mobilePhone" placeholder="Mobile phone">
+                <input type="text" name="workPhone" placeholder="Work phone">
             </div>
 
+            <hr>
 
             <div class="frame form-emails">
                 <input type="text" name="email1" placeholder="Email Address 1">
                 <input type="text" name="email2" placeholder="Email Address 2">
-                <div class="form-bounced">
-                    <p>Email bounced?</p><input type="checkbox" name="emailBounced">
+                <div class="input-with-label">
+                    <input type="checkbox" name="emailBounced"><span id="label">Email bounced?</span>
                 </div>
             </div>
 
+            <hr>
+
+            <div class="frame form-membership">
+                <div class="input-with-label frame">
+                    <input type="date" name="dateJoined"><span id="label">Date joined</span>
+                </div>
+                <div class="frame">
+                    <select name="membershipType frame">
+                        <option value="" disabled selected>Membership Type</option>
+                        <option value="annualSingle">Annual Single</option>
+                        <option value="annualDouble">Annual Double</option>
+                        <option value="annualFamily">Annual Family</option>
+                        <option value="lifeSingle">Life Single</option>
+                        <option value="lifeDouble">Life Double</option>
+                        <option value="groupAnnual">Group Annual</option>
+                        <option value="corporateAnnual">Corporate Annual</option>
+                    </select>
+                    <span id="label">Membership Type</span>
+               </div>
+                <div class="input-with-label frame">
+                    <input type="date" name="dateMembershipTypeChanged"><span id="label">Date membership joined</span>
+                </div>
+                <div class="input-with-label frame">
+                    <input type="date" name="dateLifeMembershipPaid"><span id="label">Date life membership paid</span>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="frame form-gad">
+
+                <div class="input-with-label">
+                    <input type="checkbox" name="gad"><span id="label">GAD</span>
+                </div>
+
+                <div class="input-with-label">
+                    <input type="date" name="dateGadSigned"><span id="label">Date GAD Signed</span>
+                </div>
+
+                <div class="input-with-label">
+                    <input type="date" name="dateGadCancelled"><span id="label">Date GAD Cancelled</span>
+                </div>
+            </div>
+
+            <hr>
+
             <div class="frame">
-                <select name="membershiptype" value="Membership Type">
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                </select>
+                <div class="input-with-label">
+                    <input type="checkbox" name="paysByStandingOrder"><span id="label">Pays by standing order</span>
+                </div>
+                <div class="input-with-label">
+                    <input type="checkbox" name="onlineMember"><span id="label">Online Member?</span>
+                </div>
+                <input type="textbox" name="membershipNotes" placeholder="Notes on member">
             </div>
 
             <div class="frame form-submit">
