update search and tests

--- a/assets/css/components/_adminhome.scss
+++ b/assets/css/components/_adminhome.scss
@@ -1,15 +1,7 @@
 .admin-home {
   .header {
-  text-align: center;
-  margin-top: 4.5em;}
+    text-align: center;
+    margin-top: 4.5em;}
   .admin-controls {
-      margin-top: 4em;
-      margin-left: 25%;
-    input[type=text] {
-      float: left;
-      width: 80%; }
-    input[type=submit] {
-      float: left;
-      width: 20%; }
-    input {
-      margin-bottom: 0.5em; }}}
+    margin-top: 2em;
+    margin-left: 25%;}}
