--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,10 +7,11 @@
 	'components/errormessages',
 	'components/buttons',
 	'components/forms',
-        'components/adminhome',
-        'components/navigation',
-        'components/header',
+  'components/adminhome',
+  'components/navigation',
+  'components/header',
+  'components/searchresults',
 
-        'layout/layout'
+  'layout/layout'
 
 ;
