fix form value errors

--- a/views/newmember.html
+++ b/views/newmember.html
@@ -76,15 +76,15 @@
                     <input type="date" name="dateJoined"><span id="label">Date joined</span>
                 </div>
                 <div class="frame">
-                    <select name="membershipType frame">
+                    <select name="membershipType">
                         <option value="" disabled selected>Membership Type</option>
-                        <option value="annualSingle">Annual Single</option>
-                        <option value="annualDouble">Annual Double</option>
-                        <option value="annualFamily">Annual Family</option>
-                        <option value="lifeSingle">Life Single</option>
-                        <option value="lifeDouble">Life Double</option>
-                        <option value="groupAnnual">Group Annual</option>
-                        <option value="corporateAnnual">Corporate Annual</option>
+                        <option value="Annual Single">Annual Single</option>
+                        <option value="Annual Double">Annual Double</option>
+                        <option value="Annual Family">Annual Family</option>
+                        <option value="Life Single">Life Single</option>
+                        <option value="Life Double">Life Double</option>
+                        <option value="Group Annual">Group Annual</option>
+                        <option value="Corporate Annual">Corporate Annual</option>
                     </select>
                     <span id="label">Membership Type</span>
                </div>
