--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,15 @@ input[type=button] {
   background-color: #8d8;
   cursor: pointer; }
 
+a.button {
+  background-color: #8d8;
+  border: 1px solid #8d8;
+  text-decoration: none;
+  color: #000;
+  padding: 0.5em 1.5em;
+  border-radius: 2px;
+  margin: 0.5em; }
+
 input {
   display: block;
   font-size: 1em;
@@ -197,6 +206,15 @@ select {
   .single-result p {
     float: left;
     margin-right: 2em; }
+
+.show-member {
+  margin-top: 3em;
+  margin-left: 25%; }
+
+.member-field {
+  width: 100%;
+  margin-bottom: 2em;
+  border-bottom: 1px solid #ccc; }
 
 .frame {
   max-width: 100%; }
