--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@
   'components/navigation',
   'components/header',
   'components/searchresults',
+  'components/showmember',
 
   'layout/layout'
 
