--- a/assets/css/components/_showmember.scss
+++ b/assets/css/components/_showmember.scss
@@ -1,6 +1,11 @@
 .show-member {
   margin-top: 3em;
-  margin-left: 25%;}
+  margin-left: 25%;
+  .controls {
+    height: 3em;
+    width: 100%;
+    margin-bottom: 2em;
+    border-bottom: 1px solid #aaa; }}
 
 .member-field {
   width: 100%;
