--- a/views/newmember.html
+++ b/views/newmember.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="frame bit3 form-birthday">
-                <input type="date" name="birthday" placeholder="12/12/2014 12:00">
+                <input type="date" name="birthday">
             </div>
 
             <div class="frame form-two">
@@ -65,7 +65,7 @@
                 <input type="text" name="email1" placeholder="Email Address 1">
                 <input type="text" name="email2" placeholder="Email Address 2">
                 <div class="input-with-label">
-                    <input type="checkbox" name="emailBounced"><span id="label">Email bounced?</span>
+                    <input type="checkbox" name="emailBounced" value="true"><span id="label">Email bounced?</span>
                 </div>
             </div>
 
@@ -101,15 +101,15 @@
             <div class="frame form-gad">
 
                 <div class="input-with-label">
-                    <input type="checkbox" name="gad"><span id="label">GAD</span>
+                    <input type="checkbox" name="gad" value="true"><span id="label">GAD</span>
                 </div>
 
                 <div class="input-with-label">
-                    <input type="date" name="dateGadSigned"><span id="label">Date GAD Signed</span>
+                    <input type="date" name="dateGadSigned" value="true"><span id="label">Date GAD Signed</span>
                 </div>
 
                 <div class="input-with-label">
-                    <input type="date" name="dateGadCancelled"><span id="label">Date GAD Cancelled</span>
+                    <input type="date" name="dateGadCancelled" value="true"><span id="label">Date GAD Cancelled</span>
                 </div>
             </div>
 
@@ -117,10 +117,10 @@
 
             <div class="frame">
                 <div class="input-with-label">
-                    <input type="checkbox" name="paysByStandingOrder"><span id="label">Pays by standing order</span>
+                    <input type="checkbox" name="paysByStandingOrder" value=true><span id="label">Pays by standing order</span>
                 </div>
                 <div class="input-with-label">
-                    <input type="checkbox" name="onlineMember"><span id="label">Online Member?</span>
+                    <input type="checkbox" name="onlineMember" value="true"><span id="label">Online Member?</span>
                 </div>
                 <input type="textbox" name="membershipNotes" placeholder="Notes on member">
             </div>
