--- a/views/showmember.html
+++ b/views/showmember.html
@@ -2,7 +2,7 @@
 
     <div class="controls">
         <a class="button" href="/members/{{ member.id }}/edit">Edit member</a>
-        <a class="button" href="#payments">Payment Record</a>
+        <a class="button" href="/members/{{ member.id }}/payments">Payment Record</a>
     </div>
 
     {{#member}}
