--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -33,23 +33,23 @@
   float: left; }
 
 @media (max-width: 30em) {
-  .bit-1 {
+  .bit1 {
     width: 100%; }
-  .bit-2 {
+  .bit2 {
     width: 100%; }
-  .bit-3 {
+  .bit3 {
     width: 100%; }
-  .bit-4 {
+  .bit4 {
     width: 100%; } }
 
 @media (min-width: 30em) and (max-width: 50em) {
-  .bit-4, .bit-6, .bit-8, .bit-10, .bit-12 {
+  .bit4 {
     width: 50%; }
-  .bit-1, .bit-2, .bit-3, .bit-5, .bit-7, .bit-9, .bit-11 {
+  .bit1, .bit2, .bit3 {
     width: 100%; } }
 
 @media (min-width: 50em) and (max-width: 68.75em) {
-  .bit-2, .bit-7 {
+  .bit2 {
     width: 100%; }
-  .bit-4, .bit-8, .bit-10, .bit-12 {
+  .bit4 {
     width: 50%; } }
