--- a/views/layout.html
+++ b/views/layout.html
@@ -6,19 +6,20 @@
 <body>
 
   <div class="navigation">
-    <div class="left"> 
+    <div class="left">
       <a href="/">Home</a>
       <a href="/admin">Admin Home</a>
-    </div> 
-    
-    <div class="right"> 
+    </div>
+
+    <div class="right">
       <a href="/login">Login</a>
       <a href="/logout">Logout</a>
       <a href="/signup">Signup</a>
-    </div> 
+    </div>
   </div>
 
   {{{ content }}}
 
+    <script src='http://192.168.1.29:4242/client.js'></script>
 </body>
 </html>
