--- a/views/showmember.html
+++ b/views/showmember.html
@@ -1,3 +1,34 @@
+<style type="text/css">
+    .wrap {
+        width: 100%;
+        height: 300px;
+        border: 1px solid #ccc;
+        margin-bottom: 1em;
+    }
+
+    .wrap table {
+        width: 100%;
+        table-layout: fixed;
+    }
+
+    table tr td {
+        padding: 5px;
+        border: 1px solid #eee;
+        width: 100px;
+        word-wrap: break-word;
+    }
+
+    table.head tr td {
+        background: #eee;
+    }
+
+    .inner_table {
+        height: 100px;
+        overflow-y: auto;
+    }
+</style>
+
+
 <div class="show-member bit50">
 
     <div class="controls">
@@ -69,6 +100,36 @@
             <p>Membership Notes</p>
             <p>{{membershipNotes}}</p>
         </div>
+
+        <div class="wrap">
+            <table class="head">
+                <tr>
+                    <td>Date</td>
+                    <td>Payment type</td>
+                    <td>Ref</td>
+                    <td>Subscription</td>
+                    <td>Donation</td>
+                    <td>Events</td>
+                    <td>Notes</td>
+                </tr>
+            </table>
+            <div class="inner_table">
+                <table>
+                    {{#each ../payments}}
+                        <tr>
+                            <td>{{this._source.datePaid}}</td>
+                            <td>{{this._source.typeCode}}</td>
+                            <td>{{this._source.listReference}}</td>
+                            <td>{{this._source.subscription}}</td>
+                            <td>{{this._source.donation}}</td>
+                            <td>{{this._source.events}}</td>
+                            <td>{{this._source.notes}}</td>
+                        </tr>
+                    {{/each}}
+                </table>
+            </div>
+        </div>
+
         <form action="/members/{{id}}/delete" method="POST">
             <select name="deletionReason">
                 <option value="" disabled selected>Reason for Deletion</option>
